Added test-fail conditions with exceptions